# rust-sgx-remote-attestation

./: .gitignore  build.sh  run.sh
ra-client/: Cargo.toml
ra-client/src/: context.rs
ra-common/: Cargo.toml
ra-enclave/: Cargo.toml
ra-sp/: Cargo.toml
ra-sp/examples/data/: settings.json  settings.json.original
ra-sp/src/: attestation_response.rs  context.rs  error.rs  ias.rs
sgx-crypto/: Cargo.toml
