[package]
name = "sgx-crypto"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[features]
default = []

[dependencies]
regex = "1.3.9"
base64 = "0.12.1"
byteorder = "1.3.4"

[target.'cfg(target_env = "sgx")'.dependencies]
mbedtls = { git = "https://github.com/paritytech/rust-mbedtls.git", branch = "add-pre-shared-key-changes", default-features = false, features = ["sgx"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
mbedtls = { git = "https://github.com/paritytech/rust-mbedtls.git", branch = "add-pre-shared-key-changes", default-features = false, features = ["std"] }
